# unittest-templates

./: .bumpversion.cfg  .cruft.json  .flake8  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  usage.rst
src/unittest_templates/: __init__.py  api.py  version.py
tests/: __init__.py  constants.py  test_api.py  test_version.py
