##########################
# Setup.py Configuration #
##########################
[metadata]
name = unittest_templates
version = 0.0.2-dev
description = Write less unittest boilerplate.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/unittest-templates
download_url = https://github.com/cthoyt/unittest-templates/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/unittest-templates/issues
    Source Code = https://github.com/cthoyt/unittest-templates

# Author information
author = Charles Tapley Hoyt and Max Berrendorf
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt and Max Berrendorf
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    cthoyt
    cookiecutter
    testing
    unit testing
    generics

[options]
# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx_automodapi

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = unittest_templates
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/unittest_templates
    .tox/*/lib/python*/site-packages/unittest_templates

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
